# ouroboros-testing

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  references.bib  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
docs/: methods.md
notebooks/: ouroboros_simulation.ipynb
src/: __init__.py  analysis.py  complexity.py  evolution.py  fitness.py  speciation.py
tests/: conftest.py  test_complexity.py  test_evolution.py  test_fitness.py  test_speciation.py
